# Sudoku_X_Solver

./: .gitignore  CMakeLists.txt  README.md  algorithms.c  algorithms.h  algorithms_without_diagonals.c  algorithms_without_diagonals.h  board.txt  clients.c  clients.h  doxyfile  fileio.c  fileio.h  main.c  menus.c  menus.h  solved.txt  solved_linked.txt  temp  temp.txt  todo  unsolved.txt  utils.c  utils.h
client_test_files/: client_16x16.txt  client_25x25.txt  client_9x9.txt  client_read.txt  client_search_solutions.txt  client_write.txt  unsolved_client.txt
data/solved/: solved.txt  solved_all_sizes.txt  solved_write.txt
data/unsolved/: unsolved_read.txt
docs/: algorithms_graph.ods
fase1/: algorithms.c  algorithms.h  clients.c  fileio.c  fileio.h  menus.c  utils.c  utils.h
fase2/: algorithms_linked.c  algorithms_linked.h  clients_linked.c  clients_linked.h  fileio_linked.c  fileio_linked.h  utils_linked.c  utils_linked.h
html/: graph_legend.html  index.html
latex/: refman.tex
